v1.0.0/modules/schema/pages/class/OperationsSafetySupervisor.adoc
= `OperationsSafetySupervisor`
:toclevels: 4


+++Operator with responsibility that the work in high voltage installation is executed in a safe manner and according to safety regulation.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:OperationsSafetySupervisor`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/PersonRole.adoc[`PersonRole`]
*** xref::class/OperationPersonRole.adoc[`OperationPersonRole`]
**** xref::class/Operator.adoc[`Operator`]
***** *`OperationsSafetySupervisor`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
OperationsSafetySupervisor {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



SafetyDocument {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



SafetyDocument {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



SwitchingAction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Incident {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ConfigurationEvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Appointment {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Person {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




OperationsSafetySupervisor -> SafetyDocument: IssuedSafetyDocuments


OperationsSafetySupervisor -> SafetyDocument: ReleasedSafetyDocuments


OperationsSafetySupervisor -> SwitchingAction: SwitchingSteps


OperationsSafetySupervisor -> Incident: Incidents


OperationsSafetySupervisor -> ConfigurationEvent: ConfigurationEvents


OperationsSafetySupervisor -> Appointment: Appointments


OperationsSafetySupervisor -> Person: Person


OperationsSafetySupervisor -> DiagramObject: DiagramObjects


OperationsSafetySupervisor -> InstanceSet: InstanceSet


OperationsSafetySupervisor -> Name: Names


OperationsSafetySupervisor -> ChangeSetMember: PropertiesCIMDataObject


OperationsSafetySupervisor -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<IssuedSafetyDocuments,`IssuedSafetyDocuments`>>
| 0..*
| xref::class/SafetyDocument.adoc[`SafetyDocument`]
| +++All safety documents issued by this supervisor.+++

| <<ReleasedSafetyDocuments,`ReleasedSafetyDocuments`>>
| 0..*
| xref::class/SafetyDocument.adoc[`SafetyDocument`]
| +++All safety documents released to this supervisor.+++

| <<Person,`Person`>>
| 0..1
| xref::class/Person.adoc[`Person`]
| +++Person having this role.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<Appointments,`Appointments`>>
| 0..*
| xref::class/Appointment.adoc[`Appointment`]
| +++All appointments for this person.+++

| <<ConfigurationEvents,`ConfigurationEvents`>>
| 0..*
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this person role.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Incidents,`Incidents`>>
| 0..*
| xref::class/Incident.adoc[`Incident`]
| +++All incidents owned by this operator.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<SwitchingSteps,`SwitchingSteps`>>
| 0..*
| xref::class/SwitchingAction.adoc[`SwitchingAction`]
| +++All switching steps this operator is responsible for.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Appointments]
=== `Appointments`
+++All appointments for this person.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PersonRole.Appointments`
| Cardinality
| 0..*
| Type
| xref::class/Appointment.adoc[`Appointment`]

| Inherited from
| xref::class/PersonRole.adoc[`PersonRole`]


|===

//[discrete]
[#ConfigurationEvents]
=== `ConfigurationEvents`
+++All configuration events created for this person role.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PersonRole.ConfigurationEvents`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/PersonRole.adoc[`PersonRole`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Incidents]
=== `Incidents`
+++All incidents owned by this operator.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Operator.Incidents`
| Cardinality
| 0..*
| Type
| xref::class/Incident.adoc[`Incident`]

| Inherited from
| xref::class/Operator.adoc[`Operator`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#IssuedSafetyDocuments]
=== `IssuedSafetyDocuments`
+++All safety documents issued by this supervisor.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:OperationsSafetySupervisor.IssuedSafetyDocuments`
| Cardinality
| 0..*
| Type
| xref::class/SafetyDocument.adoc[`SafetyDocument`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Person]
=== `Person`
+++Person having this role.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PersonRole.Person`
| Cardinality
| 0..1
| Type
| xref::class/Person.adoc[`Person`]

| Inherited from
| xref::class/PersonRole.adoc[`PersonRole`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ReleasedSafetyDocuments]
=== `ReleasedSafetyDocuments`
+++All safety documents released to this supervisor.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:OperationsSafetySupervisor.ReleasedSafetyDocuments`
| Cardinality
| 0..*
| Type
| xref::class/SafetyDocument.adoc[`SafetyDocument`]


|===

//[discrete]
[#SwitchingSteps]
=== `SwitchingSteps`
+++All switching steps this operator is responsible for.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Operator.SwitchingSteps`
| Cardinality
| 0..*
| Type
| xref::class/SwitchingAction.adoc[`SwitchingAction`]

| Inherited from
| xref::class/Operator.adoc[`Operator`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===


